--- a/src/components/Submissions/Submissions.css
+++ b/src/components/Submissions/Submissions.css
@@ -1,5 +1,5 @@
 #sub::-webkit-scrollbar {
-  width: 16px;
+  width: 13px;
 }
 
 #sub::-webkit-scrollbar-thumb {
